--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+1<html>
 <head>
   <title>Spotify 3D Visualizer</title>
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
@@ -6,22 +7,23 @@
   <link rel="stylesheet" href="gh-fork-ribbon.min.css" />
   <script type="text/javascript" src="glmatrix.js"></script>
   <script type="text/javascript" src="script.js"></script>
+  <script src="delaunay.js" charset="utf-8"></script>
+  <script src="vectorizer.js" charset="utf-8"></script>
 </head>
 <body>
   <canvas id="canvas" style="border: none; width:100%; height:100%;" width="1200" height="800"></canvas><br/>
   <div id="biglogin" class="biglogin"><a onclick="login()">Sign in to Spotify</a></div>
   <div id="toast" class="toast"><span id="text"></span><span id="text2"></span></div>
   <div class="trackposition" id="trackposition"><div class="fill" id="trackpositionfill"></div></div>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-90183051-5"></script>
   <script>
-    /* these are @possan's analytics, so lets disable them
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-49750240-1', 'auto');
-    ga('send', 'pageview');
-    */
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-90183051-5');
   </script>
-  <a class="github-fork-ribbon" href="https://github.com/plamere/webgl-spotify-connect-now-playing-screen-example" title="Fork me on GitHub">Fork me on GitHub</a>
 </body>
 </html>
