some small bug fixes

--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-1<html>
+<html>
 <head>
   <title>Spotify 3D Visualizer</title>
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
   <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="gh-fork-ribbon.min.css" />
   <script type="text/javascript" src="glmatrix.js"></script>
   <script type="text/javascript" src="script.js"></script>
   <script src="delaunay.js" charset="utf-8"></script>
