--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
   <div class="trackposition" id="trackposition"><div class="fill" id="trackpositionfill"></div></div>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-90183051-5"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-90183051-4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    gtag('config', 'UA-90183051-5');
-  </script>
+  gtag('config', 'UA-90183051-4');
+</script>
+
 </body>
 </html>
